# peculiar

./: .clang-format  .gitignore  CMakeLists.txt
src/: common.h  main.cpp
src/renderer/: renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
